@@ -6,6 +6,7 @@
     + Sessions can be now stored in database (#516);
     + Two-factor authenticaiton - otp (Google Authenticator);
     + Customers module (#694);
+    + Search for free subnet inside whole section;
 
     Enhancements, changes:
     ----------------------------
